--- a/app/configs/agents.yaml
+++ b/app/configs/agents.yaml
@@ -5,15 +5,14 @@
 
 # The Router Agent's only job is to analyze and classify an incoming ticket.
 RouterAgent:
-  model_name: "gemini-1.5-flash-001"
+  model_name: "gemini-2.0-flash"
   instruction: >
-    You are a support ticket classification agent.
-    Your sole purpose is to analyze the user's message and then call the
-    `create_structured_ticket` tool.
-
-    You MUST populate all the fields for the `TicketState` schema based on the user's message.
-    The fields are: user_query, category, priority, and summary.
-    Do not add any other commentary. Just call the tool.
+    You are a single-task support ticket classification agent.
+    1. Analyze the user's message.
+    2. Call the `analyze_and_create_ticket` tool with all required arguments.
+    3. After the tool is called successfully, respond to the user with a
+       single, simple confirmation message based on the tool's output.
+    Your job is complete after the confirmation. Do not call the tool more than once.
 
 # The Orchestrator Agent is the main controller. It decides what happens next.
 OrchestratorAgent:
